# cookiecutter-pypackage

./: Dockerfile  README.md  cookiecutterrc.txt  pyproject.toml  requirements.txt
tests/: test_bake_project.py
{{cookiecutter.pypi_package_name}}/: Dockerfile  compose.yml  justfile  pyproject.toml  requirements.txt  run_docker.py
{{cookiecutter.pypi_package_name}}/.github/workflows/: test.yml
{{cookiecutter.pypi_package_name}}/scripts/: install_just.py  make_env.py
