[project]
name = "{{cookiecutter.pypi_package_name}}"
version = "{{ cookiecutter.first_version }}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
    "lxml",
    "torch",
    "torchvision",
    "torchaudio",
    "tensorflow",
    "keras",
    "jax",
    "flax",
    "transformers",
    "accelerate",
    "sentencepiece",
    "onnx",
    "onnxruntime",
    "diffusers",
    "pillow",
    "numpy",
    "scipy",

    # Language and text parsing
    "spacy",
    "nltk",
    "gensim",
    "beautifulsoup4",
    "lxml",
    "regex",
    "tqdm",
    "textblob",
    "rapidfuzz",
    
    # Game creation
    "pygame",
    "pyglet",
    "arcade",
    
    # Web development
    "flask",
    "django",
    "fastapi",
    "uvicorn",
    "starlette",
    "jinja2",
    "requests",
    "httpx",
    
    # Video editing / processing
    "opencv-python",
    "moviepy",
    "ffmpeg-python",
    "imageio",
    "pillow",
    
    # Audio creation
    "pydub",
    "soundfile",
    "librosa",
    "wave",
    "scikits.audiolab",
    
    # Reverse engineering
    "capstone",
    "keystone-engine",
    "unicorn",
    "lief",
    
    # Networking / TCP/UDP
    "scapy",
    "aiohttp",
    "websockets",
    "socketio",
    
    # Data / util
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "pyyaml",
    "rich",

    # GUI
    "pyqt6",

    # Web
    "bottle",
    "pyramid",
    "django",

    # Fun
    "TTS",

    # 3D
    "trimesh",
    "pyvista",
    "open3d",
    "pygalmesh",
    "cadquery",
    "pythonocc-core",
    "meshio",
    "assimp",
    "sdf"
]

[project.urls]
bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

# -------------------------------------------------------------------
# Poetry configuration (added)
# -------------------------------------------------------------------

[tool.poetry]
name = "{{cookiecutter.pypi_package_name}}"
version = "{{ cookiecutter.first_version }}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = "MIT"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
ruff = "*"
ty = "*"
ipdb = "*"
black = "*"
mypy = "*"
flake8 = "*"
pyinstaller = "*"

[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
